# sigrun

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  ROADMAP.md  build.sh  rust-toolchain.toml  test.sh
.cargo/: config.toml
.github/workflows/: ci.yml
boot/: Cargo.toml
boot/.cargo/: config.toml
boot/src/: efi.rs  kernel.rs  main.rs  memory.rs  paging.rs  params.rs
kernel/: Cargo.toml  build.rs  linker.ld
kernel/src/: error.rs  lib.rs  log.rs  main.rs
kernel/src/arch/: mod.rs
kernel/src/arch/x86_64/: apic.rs  boot.rs  gdt.rs  idt.rs  mod.rs  paging.rs  serial.rs  switch.rs  syscall.rs
kernel/src/capability/: mod.rs  rights.rs  table.rs  transfer.rs
kernel/src/interrupt/: mod.rs
kernel/src/ipc/: channel.rs  endpoint.rs  message.rs  mod.rs  notification.rs  queue.rs  shared_memory.rs  syscall.rs
kernel/src/memory/: error.rs  frame.rs  heap.rs  mapper.rs  mod.rs  page_table.rs  region.rs
kernel/src/scheduler/: affinity.rs  context.rs  idle.rs  mod.rs  runqueue.rs  task.rs
kernel/src/syscall/: mod.rs
kernel/src/timer/: clock.rs  hpet.rs  lapic.rs  mod.rs  wheel.rs
libs/cap-std/: Cargo.toml
libs/cap-std/src/: lib.rs
libs/syscall-api/: Cargo.toml
libs/syscall-api/src/: arg.rs  error.rs  lib.rs  number.rs
scripts/: build.sh  grub.cfg  run.sh  test.sh
userspace/common/: Cargo.toml
userspace/common/src/: buffer.rs  error.rs  handle.rs  ipc.rs  lib.rs
userspace/driver-manager/: Cargo.toml
userspace/driver-manager/src/: driver.rs  main.rs  pci.rs  virtio.rs
userspace/filesystem/: Cargo.toml
userspace/filesystem/src/: immutable.rs  main.rs  request.rs  server.rs  vfs.rs
userspace/init/: Cargo.toml
userspace/init/src/: main.rs
userspace/network/: Cargo.toml
userspace/network/src/: ethernet.rs  ipv4.rs  main.rs  server.rs  socket.rs  tcp.rs  udp.rs
userspace/shell/: Cargo.toml
userspace/shell/src/: interpreter.rs  main.rs
