[package]
name = "boot"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "bootloader"
path = "src/main.rs"

[dependencies]
uefi = { version = "0.36", features = ["alloc"] }
log = "0.4"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
opt-level = "z"
lto = true
