[package]
name = "kernel"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
bitflags.workspace = true
log.workspace = true
spin.workspace = true
syscall-api = { path = "../libs/syscall-api" }

[dependencies.cranelift]
version = "0.100"
optional = true

[features]
default = []

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
