[package]
name = "kernel"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[target.'cfg(target_arch = "x86_64")'.dependencies]
# x86_64 specific dependencies can go here

[dependencies]
bitflags.workspace = true
spin.workspace = true
syscall-api = { path = "../libs/syscall-api" }

[dependencies.cranelift]
version = "0.100"
optional = true

[features]
default = []

