[package]
name = "driver-manager"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "driver-manager"
path = "src/main.rs"

[dependencies]
syscall-api = { path = "../../libs/syscall-api" }
common = { path = "../common" }
log = "0.4"
bitflags = "2.6"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
