[package]
name = "driver-manager"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "driver-manager"
path = "src/main.rs"
test = false

[dependencies]
syscall-api = { path = "../../libs/syscall-api" }
common = { path = "../common" }
log = "0.4"
bitflags = "2.6"

